# cppSocketLib

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Pipeline.cmake  README.md
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/coverage_and_tests/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
include/: cppSocket.hpp  cppSocketLib.hpp  libraryCpp.hpp  main.hpp
include_headers/: libraryCpp.hpp
scripts/: build.sh  run.sh  test.sh
src/: cppSocket.cpp  cppSocketLib.cpp  main.cpp
tests/: CMakeLists.txt
tests/unit/: cppSocket_test.cpp  main.cpp  test1.cpp  unitTcp_test.cpp  unitUdp_test.cpp
